--- a/Email-Developer-Portfolio/index.html
+++ b/Email-Developer-Portfolio/index.html
@@ -128,7 +128,7 @@
             <div id="project" class="projects">
                 
                     <div  class="item">
-                        <img src="imgs/transactional.jpg" alt="transaction email image" >
+                       <a href='https://eerickson2017.github.io/erickae.github.io/Transaction-email/'> <img src="imgs/transactional.jpg" alt="transaction email image" ></a>
                         <figcaption > <h4>Transactional Email</h4> <br>
                             <h5>Tool Stack</h5>
                             <p >HTML,CSS,Photoshop,Git</p>
@@ -136,14 +136,14 @@
                        
                     </div>
                     <div  class="item">
-                        <img src="imgs/promotional.jpg" alt="promotional email image" >
+                       <a href='https://eerickson2017.github.io/erickae.github.io/Promotional-email/'> <img src="imgs/promotional.jpg" alt="promotional email image" ></a>
                         <figcaption> <h4>Promotional Email</h4> <br>
                             <h5>Tool Stack</h5>
                             <p >HTML,CSS,Photoshop,Git</p>
                         </figcaption>
                     </div>
                     <div class="item">
-                        <img src="imgs/newsletter.jpg" alt=" newsletter email image" ">
+                       <a href='https://eerickson2017.github.io/erickae.github.io/Newsletter-email/'> <img src="imgs/newsletter.jpg" alt=" newsletter email image" "></a>
                         <figcaption> <h4>Newsletter Email</h4> <br>
                             <h5>Tool Stack</h5>
                             <p >HTML,CSS,Photoshop,Git</p>
