--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><img src="imgs/email.png" alt=""></li>
-                    <p style="padding:15px 0 15px; margin: 0;  text-align: center; color: #a27aac; font-weight: bold; background-color: #ffefce; width: 80px; "><a href="#contact">Ericka Erickson</a></p>
+                    <p  style="padding:15px 0 15px; margin: 0;  text-align: center;  font-weight: bold; background-color: #ffefce; width: 80px; "><a href="#contact">Ericka Erickson</a></p>
                     <li><a  href="#">Home</a></li>
                     <hr>
                     <li><a  href="#about">About</a></li>
@@ -158,11 +158,11 @@
                 <h1>Contact Me!</h1>
                 <div class="form-group">
                   <label>Your Name</label>
-                  <input type="text" id="name" placeholder="eg. Ericka">
+                  <input type="text" id="name" placeholder="eg. Jane Doe">
                 </div>
                 <div class="form-group">
                   <label>Your Email</label>
-                  <input type="email" id="email" placeholder="eg. ericka@gmail.com">
+                  <input type="email" id="email" placeholder="eg. your.email@gmail.com">
                 </div>
                 <div class="form-group">
                   <label>Subject</label>
