--- a/Email-Developer-Portfolio/index.html
+++ b/Email-Developer-Portfolio/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><img src="imgs/email.png" alt=""></li>
-                    <p style="padding:15px 0 15px; margin: 0;  text-align: center; color: #a27aac; font-weight: bold; background-color: #ffefce; width: 80px; "><a href="#contact">Ericka Erickson</a></p>
+                    <p style="padding:0px 0 15px; margin: 0;  text-align: center; font-weight: bold; width: 80px; "><a href="#contact" style="color: #9e81b9;">Ericka Erickson</a></p>
                     <li><a  href="#">Home</a></li>
                     <hr>
                     <li><a  href="#about">About</a></li>
