--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <section class="header">
+    <section id="header">
         <a href="#"><img src="imgs/logo.png" alt="">
         </a>
 
         <div>
-            <ul class="navbar">
+            <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -23,6 +23,13 @@
 
             </ul>
         </div>
+    </section>
+    <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super Value Deals</h2>
+        <h1>On all Products</h1>
+        <p>save more with coupons & up to 70% off!</p>
+        <button>Shop Now</button>
     </section>
 
 
