--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -31,6 +31,33 @@
         <p>save more with coupons & up to 70% off!</p>
         <button>Shop Now</button>
     </section>
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="imgs/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f5.png" alt="">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f6.png" alt="">
+            <h6>Support</h6>
+        </div>
+    </section>
+
 
 
     <script src="script.js"></script>
