added 70% off banner

--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -194,6 +194,11 @@
 
         </div>
     </section>
+    <section id="banner" class="section-m1">
+        <h4>Repair services</h4>
+        <h2>Up tp <span>70% off</span> - All t-Shirts & Acesssories </h2>
+        <button class="normal">Explore More</button>
+    </section>
 
 
 
