--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -31,6 +31,7 @@
         <p>save more with coupons & up to 70% off!</p>
         <button>Shop Now</button>
     </section>
+
     <section id="feature" class="section-p1">
         <div class="fe-box">
             <img src="imgs/f1.png" alt="">
@@ -57,6 +58,7 @@
             <h6>Support</h6>
         </div>
     </section>
+
     <section id="product1" class="section-p1">
         <h2>Featured Products</h2>
         <p>Summer Collection New Morden Design</p>
@@ -194,11 +196,13 @@
 
         </div>
     </section>
+
     <section id="banner" class="section-m1">
         <h4>Repair services</h4>
         <h2>Up tp <span>70% off</span> - All t-Shirts & Acesssories </h2>
         <button class="normal">Explore More</button>
     </section>
+
     <section id="product1" class="section-p1">
         <h2>New Arrivals</h2>
         <p>Summer Collection New Morden Design</p>
@@ -336,7 +340,47 @@
 
         </div>
     </section>
-    
+
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box">
+            <h4>Crazy deals</h4>
+            <h2>buy 1 get 1 free</h2>
+            <span>The best classic dress is on sale at cara</span>
+            <button class="white"> Learn More</button>
+        </div>
+        <div class="banner-box banner-box2">
+            <h4>spring/summer</h4>
+            <h2>upcoming season</h2>
+            <span>The best classic dress is on sale at cara</span>
+            <button class="white"> collection</button>
+        </div>
+    </section>
+
+    <section id="banner3">
+        <div class="banner-box">
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection - 50% OFF</h3>
+        </div>
+        <div class="banner-box banner-box2">
+            <h2>NEW FOOTWEAR COLLECTION</h2>
+            <h3>Spring / Summer 2023</h3>
+        </div>
+        <div class="banner-box banner-box3">
+            <h2>T-SHIRTS</h2>
+            <h3>New Trendy Prints </h3>
+        </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign up For Newsletters</h4>
+            <p>get E-mail updates about our latest shop and <span>special offers</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email adress">
+            <button class="normal">Sign up</button>
+        </div>
+    </section>
 
 
 
