added shop page and single product details

--- a/ecomerce-project/shop.html
+++ b/ecomerce-project/shop.html
@@ -37,7 +37,8 @@
 
     <section id="product1" class="section-p1">
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro"  >
+            <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/f1.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -52,8 +53,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/f2.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -68,8 +71,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+            <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/f3.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -84,8 +89,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/f4.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -100,8 +107,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/f5.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -116,8 +125,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
-            <div class="pro">
+            <div class="pro"
+            < a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/f6.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -132,8 +143,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/f7.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -148,8 +161,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/f8.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -164,8 +179,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </a>    
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">    
                 <img src="imgs/products/n1.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -180,8 +197,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n2.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -196,8 +215,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n3.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -212,8 +233,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n4.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -228,8 +251,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n5.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -244,8 +269,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n6.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -260,8 +287,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n7.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -276,8 +305,10 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
             <div class="pro">
+                <a href="sproduct.html" style="text-decoration: none;">
                 <img src="imgs/products/n8.jpg" alt="">
                 <div class="desc">
                     <span>Adidas</span>
@@ -292,6 +323,7 @@
                     <h4>$74</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </a>
             </div>
 
 
