added about page

--- a/ecomerce-project/about.html
+++ b/ecomerce-project/about.html
@@ -17,8 +17,8 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a class="active" href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
@@ -31,74 +31,59 @@
 
         </div>
     </section>
-    <section class="blogheader">
-        <h2>#readmore</h2>
+
+    <section class="about-header">
+        <h2>#knowus</h2>
         <p>save more with coupons & up to 70% off!</p>
     </section>
-    <section id="blog">
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="imgs/blog/b1.jpg" alt="">
-            </div>    
-            <div class="blog-details">
-                <h4>The Cotton-Jersery Zip-up Hoodie </h4>
-                <p>this is a filler blog post about a new trend. that has gone viral . it shows a cool fashion idea...</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="imgs/blog/b3.jpg" alt="">
-            </div>    
-            <div class="blog-details">
-                <h4>The Cotton-Jersery Zip-up Hoodie </h4>
-                <p>this is a filler blog post about a new trend. that has gone viral . it shows a cool fashion idea...</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="imgs/blog/b4.jpg" alt="">
-            </div>    
-            <div class="blog-details">
-                <h4>The Cotton-Jersery Zip-up Hoodie </h4>
-                <p>this is a filler blog post about a new trend. that has gone viral . it shows a cool fashion idea...</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="imgs/blog/b6.jpg" alt="">
-            </div>    
-            <div class="blog-details">
-                <h4>The Cotton-Jersery Zip-up Hoodie </h4>
-                <p>this is a filler blog post about a new trend. that has gone viral . it shows a cool fashion idea...</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="imgs/blog/b7.jpg" alt="">
-            </div>    
-            <div class="blog-details">
-                <h4>The Cotton-Jersery Zip-up Hoodie </h4>
-                <p>this is a filler blog post about a new trend. that has gone viral . it shows a cool fashion idea...</p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-        </div>
+
+    <section id="about-head" class="section-p1">
+       <img src="imgs/about/a6.jpg" alt="">
+       <div>
+        <h2>Who We Are?</h2>
+        <p>We take pride in fostering a community where your satisfaction is our top priority. Our dedicated team works tirelessly to create a seamless shopping experience, from effortless browsing to swift checkout and reliable delivery. Your trust in us drives our commitment to excellence in every aspect of our service.</p>
+
+        <abbr title="">Create stunning images with as much or as little as you want thanks to a choice of basic and creative modes.</abbr>
+
+        <br><br>
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width='100%'>Create stunning images with as much or as little as you want thanks to a choice of basic and creative modes</marquee>
+
+       </div>
     </section>
-   
-    <section id="paganation" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
 
+    <section id="about-app" class="sectionp1">
+        <h1>Download our <a href="#">App</a></h1>
+        <div class="video">
+            <img src="imgs/about/a3.png"></img>
+        </div>
 
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="imgs/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f5.png" alt="">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="imgs/f6.png" alt="">
+            <h6>Support</h6>
+        </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
