started adding js for cart additions

--- a/ecomerce-project/cart.html
+++ b/ecomerce-project/cart.html
@@ -20,15 +20,18 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a  href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li class="active" id="lg-bag"><a href="cart.html"><i style="color:#088178" class="fa-solid fa-cart-shopping "></i></a></li>
+                <li class="active" id="lg-bag"><a href="cart.html"><i style="color:#088178" class="fa-solid fa-cart-shopping "></i></a>
+                </li>
+                <span>0</span>
                 <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
 
             </ul>
         </div>
         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <i id="bar" class="fas fa-outdent"></i>
+            <span>0</span> 
 
+            <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
@@ -100,7 +103,7 @@
                 </tr>
             </table>   
         </div>
-        <button  id='checkout' class="normal">Proceed to checkout</button> 
+        <button  id='checkout' class="normal checkout">Proceed to checkout</button> 
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
