--- a/ecomerce-project/contact.html
+++ b/ecomerce-project/contact.html
@@ -20,13 +20,16 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a  href="about.html">About</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li class="active" id="lg-bag"><a href="cart.html"><i style="color:#088178" class="fa-solid fa-cart-shopping "></i></a>
+                </li>
                 <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
 
             </ul>
         </div>
         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <span>0</span> 
+
             <i id="bar" class="fas fa-outdent"></i>
 
         </div>
