--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -20,13 +20,16 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li class="active" id="lg-bag"><a href="cart.html"><i style="color:#088178" class="fa-solid fa-cart-shopping "></i></a>
+                </li>
+                <span>0</span>                
                 <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
 
             </ul>
         </div>
         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <span>0</span> 
             <i id="bar" class="fas fa-outdent"></i>
 
         </div>
@@ -82,10 +85,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>    
+                </div>
             <div class="pro">
                 <img src="imgs/products/f2.jpg" alt="">
                 <div class="desc">
@@ -98,10 +103,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
             <div class="pro">
                 <img src="imgs/products/f3.jpg" alt="">
                 <div class="desc">
@@ -114,10 +121,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
             <div class="pro">
                 <img src="imgs/products/f4.jpg" alt="">
                 <div class="desc">
@@ -130,10 +139,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
             <div class="pro">
                 <img src="imgs/products/f5.jpg" alt="">
                 <div class="desc">
@@ -146,10 +157,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
             <div class="pro">
                 <img src="imgs/products/f6.jpg" alt="">
                 <div class="desc">
@@ -162,10 +175,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                <button class="addcart">
+                    <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </button>
+             </div>
             <div class="pro">
                 <img src="imgs/products/f7.jpg" alt="">
                 <div class="desc">
@@ -178,10 +193,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
             <div class="pro">
                 <img src="imgs/products/f8.jpg" alt="">
                 <div class="desc">
@@ -194,10 +211,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$74</h4>
+                    <h4 class="price">$74</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+                    <button class="addcart">
+                        <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    </button>
+                </div>
 
 
 
